add the results part of mini-meta

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -6,7 +6,7 @@ author:
   - name          : "Chuan-Peng Hu"
     affiliation   : "1,2"
     corresponding : yes    # Define only one corresponding author
-    address       : "55131"
+    address       : "Langenbeckstr. 1, Neuroimaging Center, University Medical Center Mainz, 55131 Mainz, Germany"
     email         : "hcp4715@email.com"
   - name          : "Jie Sui"
     affiliation   : "3"
@@ -89,7 +89,7 @@ CommonColnames_rt <- c("ExpID", "Site", "Subject", "Age", "Sex", 'Domain', "Matc
 
 # General Methods
 ## Participants.
-The experiments (except experiment 3b) reported in the current study were first conducted between 2014 to 2016 in Tsinghua University, Beijing, participants of these experiments were recruited in Tsinghua University community. To increase the power by adding collecting more data so that each experiment has 50 or more valid data (Simmons, Nelson, & Simonsohn, 2013) , we recruited additional participants in Wenzhou University, Wenzhou, China in 2017. However, due to the limited time and resources, additional data were collected for experiment 1a, 1b, 4a, and 4b, but not other experiments. We report all the variables measured in our experiment.
+All experiments (1a ~ 6b, except experiment 3b) reported in the current study were first finished between 2014 to 2016 in Tsinghua University, Beijing, participants of these experiments were recruited in Tsinghua University community. To increase the power by adding more data so that each experiment has 50 or more valid data (Simmons, Nelson, & Simonsohn, 2013) , we recruited additional participants in Wenzhou University, Wenzhou, China in 2017. Due to the limited time and resources, additional data were collected for experiment 1a, 1b, 4a, and 4b, but not other experiments. We report all the variables measured in our experiment.
 
  <!-- 21-word solution (Simmons, Nelson & Simonsohn, 2012; retrieved from http://ssrn.com/abstract=2160588) -->
 
@@ -99,6 +99,8 @@ In the current study, we used the social associative learning paradigm (or a var
 If not noted, E-prime 2.0 was used in all experiments. For participants recruited in Tsinghua University, they finished the experiment individually in a dim-lighted chamber, stimuli were presented on 22-inch CRT monitors, with a chin-rest brace. The visual angle of geometric shapes was about 3.7º × 3.7º, the finxation cross is of (0.8º × 0.8º of visual angle) at the center of the screen. The words were of 3.6º × 1.6º visual angle. The distance between the center of the shape or the word and the fixation cross was 3.5º of visual angle. Participant fixed their head on a chin-fixation, about 60 cm from the screen. 
 
 For participants recruited in Wenzhou University, they finished the experiment in a group consist of 3 ~ 12 participants in a dim-lighted testing room. Participants were required to finished the whole experiment independently. Also, they were instructed to start the experiment at the same time, so that the distraction between participants were minimized. The stimuli were presented on 19-inch CRT monitor. The visual angles are could not be exactly controlled because participants’s chin were not fixed.
+
+In most of these experiments, participant were also asked to fill a battery of questionnaire after they finish the cognitive tasks. More specificially, ....... All the questionnaire data are open (see, Liu et al., 2019)
 
 
 ## Data analysis
@@ -3232,6 +3234,13 @@ multiplot(p_meta_rt, p_meta_dprime, cols = 2)
 
 
 Figure \@ref(fig:meta-all-dprime-rt) shows meta-analytic results for the effect of *d* prime and reaction times from Good-Bad, Good-Neutral, and Neutral-Bad contrast. 
+
+Across all experiments, we found that the good-association condition has advantage over bad conditions for both RT (Cohen's d = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']`]). Also the good-association has advantages over the neutral condition for both RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']`]). But the neutral condition did not differ from the bad conditions for d prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']`]) but slightly faster on RT, RT Cohen's (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']`]).
+
+When we distinguish between self-referential and other-referential conditions, it is clear that the over all effect was mainly stem from the self-referential conditions: The good-association condition has advantage over bad conditions for both RT (Cohen's d = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']`]), and over neutral condition for both  both RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']`]), but not for the *d* prime between neutral and bad on RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']`]) or *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']`]). 
+
+For the other condition, no differences were observed for *d* prime: Good vs. Bad  (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']`]); good vs. neutral (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']`]); neutral vs. bad (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']`]). But the effect on RT has the similar pattern as the overall effect, with much small effect size on Good vs. Bad, (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']`]) and Good vs. Neutral, (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']`]), and similar effect size on neutral vs. bad condition,  (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']`]).
+
 
 
 # Behavioral-Traits correlation analysis
