--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -108,7 +108,7 @@ Jie Sui, Department of Psychology, the University of Bath, Bath, UK.
 
 Authors contriubtion: CPH, JS, \& KP design the study, CPH collected the data, CPH analyzed the data and drafted the manuscript. KP \& JS supported this project.
 
-Correspondence concerning this article should be addressed to Chuan-Peng Hu, 55131. E-mail: \href{mailto:hcp4715@email.com}{\nolinkurl{hcp4715@email.com}}}
+Correspondence concerning this article should be addressed to Chuan-Peng Hu, Langenbeckstr. 1, Neuroimaging Center, University Medical Center Mainz, 55131 Mainz, Germany. E-mail: \href{mailto:hcp4715@email.com}{\nolinkurl{hcp4715@email.com}}}
 
 \abstract{
 One or two sentences providing a \textbf{basic introduction} to the field, comprehensible to a scientist in any discipline.
@@ -868,6 +868,12 @@ In total, we calculated nine meta-analyses for both reaction times and \emph{d} 
 \end{figure}
 
 Figure \ref{fig:meta-all-dprime-rt} shows meta-analytic results for the effect of \emph{d} prime and reaction times from Good-Bad, Good-Neutral, and Neutral-Bad contrast.
+
+Across all experiments, we found that the good-association condition has advantage over bad conditions for both RT (Cohen's d = -0.51, 95\%CI{[}-0.65 -0.37{]}) and \emph{d} prime (Cohen's \emph{d} = 0.23, 95\%CI{[}0.15 0.32{]}). Also the good-association has advantages over the neutral condition for both RT (Cohen's \emph{d} = -0.39, 95\%CI{[}-0.54 -0.23{]}) and \emph{d} prime (Cohen's \emph{d} = 0.27, 95\%CI{[}0.14 0.40{]}). But the neutral condition did not differ from the bad conditions for d prime (Cohen's \emph{d} = -0.03, 95\%CI{[}-0.13 0.08{]}) but slightly faster on RT, RT Cohen's (Cohen's \emph{d} = -0.11, 95\%CI{[}-0.21 -0.01{]}).
+
+When we distinguish between self-referential and other-referential conditions, it is clear that the over all effect was mainly stem from the self-referential conditions: The good-association condition has advantage over bad conditions for both RT (Cohen's d = -0.74, 95\%CI{[}-1.02 -0.47{]}) and \emph{d} prime (Cohen's \emph{d} = 0.55, 95\%CI{[}0.36 0.74{]}), and over neutral condition for both both RT (Cohen's \emph{d} = -0.56, 95\%CI{[}-0.85 -0.28{]}) and \emph{d} prime (Cohen's \emph{d} = 0.46, 95\%CI{[}0.17 0.75{]}), but not for the \emph{d} prime between neutral and bad on RT (Cohen's \emph{d} = -0.05, 95\%CI{[}-0.17 0.08{]}) or \emph{d} prime (Cohen's \emph{d} = 0.08, 95\%CI{[}-0.08 0.24{]}).
+
+For the other condition, no differences were observed for \emph{d} prime: Good vs.~Bad (Cohen's \emph{d} = -0.04, 95\%CI{[}-0.15 0.08{]}); good vs.~neutral (Cohen's \emph{d} = -0.03, 95\%CI{[}-0.19 0.13{]}); neutral vs.~bad (Cohen's \emph{d} = 0.02, 95\%CI{[}-0.06 0.11{]}). But the effect on RT has the similar pattern as the overall effect, with much small effect size on Good vs.~Bad, (Cohen's \emph{d} = -0.26, 95\%CI{[}-0.43 -0.10{]}) and Good vs.~Neutral, (Cohen's \emph{d} = -0.10, 95\%CI{[}-0.25 0.04{]}), and similar effect size on neutral vs.~bad condition, (Cohen's \emph{d} = -0.11, 95\%CI{[}-0.25 0.03{]}).
 
 \hypertarget{behavioral-traits-correlation-analysis}{%
 \section{Behavioral-Traits correlation analysis}\label{behavioral-traits-correlation-analysis}}
