--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -24,7 +24,7 @@
 \usepackage{hyperref}
 \hypersetup{unicode=true,
             pdftitle={Open notebook of perpecptual salience of positive self},
-            pdfauthor={Chuan-Peng Hu, Jie Sui, \& Kaiping Peng},
+            pdfauthor={Chuan-Peng Hu, Kaiping Peng, \& Jie Sui},
             pdfkeywords={Perceptual decision-making, Self},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -64,7 +64,7 @@
 
 
   \title{Open notebook of perpecptual salience of positive self}
-    \author{Chuan-Peng Hu\textsuperscript{1,2}, Jie Sui\textsuperscript{3}, \& Kaiping Peng\textsuperscript{1}}
+    \author{Chuan-Peng Hu\textsuperscript{1,2}, Kaiping Peng\textsuperscript{1}, \& Jie Sui\textsuperscript{3}}
     \date{}
   
 \shorttitle{Salient Positive Self}
@@ -137,7 +137,7 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \hypertarget{participants.}{%
 \subsection{Participants.}\label{participants.}}
 
-The experiments (except experiment 3b) reported in the current study were first conducted between 2014 to 2016 in Tsinghua University, Beijing, participants of these experiments were recruited in Tsinghua University community. To increase the power by adding collecting more data so that each experiment has 50 or more valid data (Simmons, Nelson, \& Simonsohn, 2013) , we recruited additional participants in Wenzhou University, Wenzhou, China in 2017. However, due to the limited time and resources, additional data were collected for experiment 1a, 1b, 4a, and 4b, but not other experiments. We report all the variables measured in our experiment.
+All experiments (1a \textasciitilde{} 6b, except experiment 3b) reported in the current study were first finished between 2014 to 2016 in Tsinghua University, Beijing, participants of these experiments were recruited in Tsinghua University community. To increase the power by adding more data so that each experiment has 50 or more valid data (Simmons, Nelson, \& Simonsohn, 2013) , we recruited additional participants in Wenzhou University, Wenzhou, China in 2017. Due to the limited time and resources, additional data were collected for experiment 1a, 1b, 4a, and 4b, but not other experiments. We report all the variables measured in our experiment.
 
 \hypertarget{material-and-procedure}{%
 \subsection{Material and Procedure}\label{material-and-procedure}}
@@ -147,6 +147,8 @@ In the current study, we used the social associative learning paradigm (or a var
 If not noted, E-prime 2.0 was used in all experiments. For participants recruited in Tsinghua University, they finished the experiment individually in a dim-lighted chamber, stimuli were presented on 22-inch CRT monitors, with a chin-rest brace. The visual angle of geometric shapes was about 3.7º × 3.7º, the finxation cross is of (0.8º × 0.8º of visual angle) at the center of the screen. The words were of 3.6º × 1.6º visual angle. The distance between the center of the shape or the word and the fixation cross was 3.5º of visual angle. Participant fixed their head on a chin-fixation, about 60 cm from the screen.
 
 For participants recruited in Wenzhou University, they finished the experiment in a group consist of 3 \textasciitilde{} 12 participants in a dim-lighted testing room. Participants were required to finished the whole experiment independently. Also, they were instructed to start the experiment at the same time, so that the distraction between participants were minimized. The stimuli were presented on 19-inch CRT monitor. The visual angles are could not be exactly controlled because participants's chin were not fixed.
+
+In most of these experiments, participant were also asked to fill a battery of questionnaire after they finish the cognitive tasks. More specificially, \ldots{}\ldots{}. All the questionnaire data are open (see, Liu et al., 2019)
 
 \hypertarget{data-analysis}{%
 \subsection{Data analysis}\label{data-analysis}}
@@ -846,7 +848,7 @@ Mini Meta-analysis was carried out in R 3.6. As for the meta-analysis of the eff
 \hypertarget{data-analysis-8}{%
 \subsubsection{Data analysis}\label{data-analysis-8}}
 
-We first calculated the mean of \emph{d} prime and RT of each condition for each participant, then calculate the effect size (Cohen's d) and variance of the effect size for each contrast (i.e., Good v. Bad, Good v. Neutral, and Neutral v. Bad). Cohen'd and its variance were estimated using the following formula (Citation):
+We first calculated the mean of \emph{d} prime and RT of each condition for each participant, then calculate the effect size (Cohen's d) and variance of the effect size for each contrast (i.e., Good v. Bad, Good v. Neutral, and Neutral v. Bad). Cohen'd and its variance were estimated using the following formula (Cooper, Hedges, \& Valentine, 2009):
 
 \[Cohen's d = \frac {(M_{1} - M_{2})}{\sqrt {(sd_{1}^2 + sd_{2}^2) - 2*r*sd_{1}*sd_{2}}} * \sqrt {2*(1-r)}\]
 
